--- a/exercises/index.html
+++ b/exercises/index.html
@@ -10,10 +10,10 @@
 <body class="dark:bg-gray-700">
 	<div class="w-3/6 m-6 p-6 bg-purple-600 drop-shadow-2xl border-t-4 
 			hover:border-blue-900  hover:bg-blue-600 border-purple-900 rounded-xl">
-		<h1 class="text-3xl font-bold">Tailwind CSS ❤</h1>
+		<h1 class="text-3xl font-bold">tailwind css ❤</h1>
 		<p class="font-medium text-lg leading-6 text-gray-800">
-			Tailwind CSS is basically a utility-first CSS framework for
-			rapidly building custom user interfaces. It is a highly
+			tailwind css is basically a utility-first css framework for
+			rapidly building custom user interfaces. it is a highly
 			customizable, low-level CSS framework that gives you all of the
 			building blocks you need to build bespoke designs.
 		</p>
